--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "8.0.3",
     "jest-when": "3.5.2",
     "lockfile-lint": "4.10.5",
+    "make-dir": "3.1.0",
     "mock-fs": "5.2.0",
     "npm-run-all": "4.1.5",
     "publint": "0.1.12",
@@ -75,5 +76,8 @@
     "rollup": "3.23.0",
     "rollup-plugin-auto-external": "2.0.0",
     "vitest": "0.31.3"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0"
   }
 }
