--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "husky": "8.0.3",
     "jest-when": "3.5.2",
     "lockfile-lint": "4.10.5",
-    "make-dir": "3.1.0",
     "mock-fs": "5.2.0",
     "npm-run-all": "4.1.5",
     "publint": "0.1.12",
@@ -79,6 +78,7 @@
     "vitest": "0.31.3"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "make-dir": "^3.1.0"
   }
 }
