ci(renovate): enabled a regex manager to update action versions for the scaffolded workflow

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -2,5 +2,13 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>form8ion/renovate-config:js-package"
+  ],
+  "regexManagers": [
+    {
+      "description": "Update action versions in scaffolded workflow",
+      "fileMatch": ["^\\src/workflow/.+\\.js$"],
+      "matchStrings": ["\\uses: '(?<depName>.*?)@(?<currentValue>.*?)'"],
+      "datasourceTemplate": "action"
+    }
   ]
 }
