ci(renovate): adjusted the `fileMatch` for the actions in source updates

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,7 +6,7 @@
   "regexManagers": [
     {
       "description": "Update action versions in scaffolded workflow",
-      "fileMatch": ["^\\src/workflow/.+\\.js$"],
+      "fileMatch": ["^src/workflow/.+\\.js$"],
       "matchStrings": ["\\suses: '(?<depName>.*?)@(?<currentValue>.*?)'"],
       "datasourceTemplate": "action"
     }
