ci(renovate): changed the datasource from `action` to `github-actions`

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -8,7 +8,7 @@
       "description": "Update action versions in scaffolded workflow",
       "fileMatch": ["^src/workflow/.+\\.js$"],
       "matchStrings": ["\\suses: '(?<depName>.*?)@(?<currentValue>.*?)'"],
-      "datasourceTemplate": "action"
+      "datasourceTemplate": "github-actions"
     }
   ]
 }
