--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -10,5 +10,10 @@
       "matchStrings": ["\\suses: '(?<depName>.*?)@(?<currentValue>.*?)'"],
       "datasourceTemplate": "github-tags"
     }
-  ]
+  ],
+  "packageRules": [{
+    "semanticCommitType": "fix",
+    "matchManagers": ["regex"],
+    "matchDepTypes": ["github-actions"]
+  }]
 }
